Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92011

Qt 6.1.0 betas fail to compile: qpaintengine_x11.cpp:2457:43: error: no matching member function for call to 'loadGlyph'

    XMLWordPrintable

Details

    • Linux/X11
    • 70251867a50f9f606a7ceaf2338375a67e413b83 (qt/qtbase/dev) 7c3311e196d7ecb1e799019f3e861c56375f7f4a (qt/qtbase/6.1)

    Description

      qpaintengine_x11.cpp fails to build in the 6.1.0 betas:

      {{../src/plugins/platforms/xcb/nativepainting/qpaintengine_x11.cpp:2457:43: error: no matching member function for call to 'loadGlyph'
      QFontEngineFT::Glyph *glyph = ft->loadGlyph(glyphs[i], 0, QFontEngineFT::Format_Mono);
      ~~~^~~~~~~~
      include/QtGui/6.1.0/QtGui/private/../../../../../../src/gui/text/freetype/qfontengine_ft_p.h:263:19: note: candidate function not viable: no known conversion from 'int' to 'const QFixedPoint' for 2nd argument
      inline Glyph *loadGlyph(uint glyph,
      ^
      include/QtGui/6.1.0/QtGui/private/../../../../../../src/gui/text/freetype/qfontengine_ft_p.h:269:12: note: candidate function not viable: no known conversion from 'const unsigned int' to 'QFontEngineFT::QGlyphSet *' for 1st argument
      Glyph *loadGlyph(QGlyphSet *set,
      ^
      ../src/plugins/platforms/xcb/nativepainting/qpaintengine_x11.cpp:2610:64: error: no viable conversion from 'const QFixed' to 'const QFixedPoint'
      QFontEngineFT::Glyph *glyph = set->getGlyph(glyphs[i], spp);
      ^~~
      }}

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            bero Bernhard Rosenkränzer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes