src/gui/text/freetype/qfontengine_ft_p.h
@@ -363,7 +363,7 @@ private:
 Q_DECLARE_TYPEINFO(QFontEngineFT::QGlyphSet, Q_RELOCATABLE_TYPE);
 
 
-inline size_t qHash(const QFontEngineFT::GlyphAndSubPixelPosition &g, size_t seed)
+inline size_t qHash(const QFontEngineFT::GlyphAndSubPixelPosition &g, size_t seed = 0)
 {
     return qHashMulti(seed,
                       g.glyph,
